--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@mui/system": "^5.15.13",
+    "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2"
   },
