--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@mui/system": "^5.15.13",
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
+    "html-react-parser": "^5.1.9",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "react-slick": "^0.30.2"
+    "react-slick": "^0.30.2",
+    "recharts": "^2.12.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
